<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/tab_tasks" />
    <item
        android:id="@+id/nav_timer"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/tab_timer" />
    <item
        android:id="@+id/nav_lock"
        android:icon="@android:drawable/ic_lock_idle_lock"
        android:title="@string/tab_lock" />
    <item
        android:id="@+id/nav_review"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/tab_review" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/tab_profile" />
</menu>
